--- a/lo1.html
+++ b/lo1.html
@@ -67,19 +67,19 @@
     <section class="content">
         <h2 class="title">Loop - Media Agency</h2>
         <div class="proof">
-            <h4 class="sub-title">Name choice</h4>
-            <p>I came up with the name Loop. In high school I had an assignment to create a logo for a hacker. Back then I made a logo with a magnifying glass, in dutch that is called a loep. But for a moment I thought it was written as loop so I suggested it. Loop also has the meaning of looping in code or a rope. We found it fitting and went for it. Afterwards I also wrote down some core values, our mission and origin story, which we refined further in the project.</p>
+            <h4 class="sub-title" id="Name">Name choice</h4>
+            <p >I came up with the name Loop. In high school I had an assignment to create a logo for a hacker. Back then I made a logo with a magnifying glass, in dutch that is called a loep. But for a moment I thought it was written as loop so I suggested it. Loop also has the meaning of looping in code or a rope. We found it fitting and went for it. Afterwards I also wrote down some core values, our mission and origin story, which we refined further in the project.</p>
             <img src="images/logo inspo.png" alt="logo inspiration">
             <img src="images/mockup_loop.png" alt="mockup logo loop">
         </div>
         <div class="proof">
-            <h4 class="sub-title">Style scapes</h4>
+            <h4 class="sub-title" id="Style-scape">Style scapes</h4>
             <p>I made a style scape in Adobe Illustrator. For my style scape I used soft, but cheerful colors. I tried making it even more playful by adding shapes and squiggles. After finding inspiration for the logo, I kind of recreated it with a different font. I also made an animation with Adobe Animate. This was my first time using the program so I looked up some <a href="https://www.youtube.com/watch?v=0itiuHreY3A">tutorials.</a> This animation helps a lot with the readability. </p>
             <img src="images/style scape_yagmur.png" alt="style scape loop">
             <img src="images/animation.gif" alt="logo animation">
         </div>
         <div class="proof">
-            <h4 class="sub-title">Poster</h4>
+            <h4 class="sub-title" id="Poster">Poster</h4>
             <p>To catch the attention of potential stakeholders I made an eye catching poster. For this I used multiple programs like InDesign, Illustrator, Photoshop and Figma. I used a lot of different techniques which I learned along the way.</p>
             <img src="images/Poster_loop.png" alt="poster Loop">
         </div>
@@ -89,28 +89,28 @@
 
         <h2 class="title">Friends with "Benefits"</h2>
         <div class="proof">
-            <h4 class="sub-title">Concept</h4>
+            <h4 class="sub-title" id="Concept">Concept</h4>
             <p>For this project we changed our concept once completely. At first we had the idea to create an educational <a href="images/NEWS-the game.pdf">news game</a>  for younger teenagers. But our stake holder did not seem very enthusiastic about the whole concept. So I did more research on existing games and came up with a guessing game. My <a href="images/Friend with benefits.pdf">initial idea</a> was having cards with 5 statements on it which one player has to rank and the other players have to guess that one players ranking. What started out as an innocent game ended up being a very spicy 18+ party game. </p>
         </div>
         <div class="proof">
-            <h4 class="sub-title">Techniques</h4>
+            <h4 class="sub-title" id="Techniques">Techniques</h4>
             <p>At first we wanted to have 3 levels, casual, mild and spicy. During the paper prototyping we found out that it makes the game more fun if it is randomized. For this I had created a pinwheel to help keep the game exiting. I did this by making a pie slice and duplicating and rotating this until I got a full circle. On the board itself I had also used the 3 colors corresponding to the 3 levels. This way there would be another way of playing the game. Whichever color you land on is the card you pick on the next round.</p>
             <img src="images/paper prototype.jpg" alt="">
             <img src="images/wheel W arrow.png" alt="">
         </div>
         <div class="proof">
-            <h4 class="sub-title">Box design</h4>
+            <h4 class="sub-title" id="Box-design">Box design</h4>
             <p>Packaging is an important factor, it’s the first thing anyone sees about a product. Another teammate had already made a styles so I went off of that. I started by doing research to existing games. I wrote out <a href="images/eisen.pdf">everything</a> that has to be on the box. After making sketches I started designing on illustrator. You can read more about the iterative process in LO 3.</p>
             <img src="images/sketches.jpg" alt="">
         </div>
         <div class="proof">
-            <h4 class="sub-title">Prototypes</h4>
+            <h4 class="sub-title" id="Prototype">Prototypes</h4>
             <p>I had created the packaging on a box template so it would be easy to print and put together. This way I was also able to make simple mockups. I downloaded free mockups from the internet and added my own design to create a mockup. This helped us visualize the product. Another teammate also made a design after doing even more research. We printed both on a piece of paper and put the boxes together. This way we were able to do AB tests. </p>
             <img src="images/mockup_rood.png" alt="">
             <img src="images/2box.jpg" alt="">
         </div>
         <div class="proof">
-            <h4 class="sub-title">Website</h4>
+            <h4 class="sub-title" id="Product-website">Website</h4>
             <p>We created a product <a href="https://www.figma.com/proto/gpREKUao3aSIgUmv4ZDmj9/Friends-w-Benefits?page-id=0%3A1&node-id=1-2&viewport=424%2C181%2C0.09&t=JUAPiJmPW4y8wxaz-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=1%3A2">website</a> for marketing. I made the whole home page. Our final design has a racoon mascot. I suggesting giving the racoon a name, which ended up being Rick. This will help with our marketing. In the FAQ section I added a lot of jokes about Rick. I also had the idea to make merchandise. We created condoms, grinders and shot glasses with a picture of Rick on it. When we presented this to our teacher, we got a lot of laughs and good feedback.</p>
             <img src="images/1screen.png" alt="">
             <img src="images/2screens.png" alt="">
@@ -125,16 +125,16 @@
             <p>I decided to make my digital portfolio a website. This way it is easier to find everything, keep it updated and I will be able to prove all learning outcomes.  </p>
         </div>
         <div class="proof">
-            <h4 class="sub-title">Inspiration</h4>
+            <h4 class="sub-title" id="Portfolio-inspo">Inspiration</h4>
             <p>I did research on color combinations and existing portfolios and website layouts. After collecting all of that I made wireframes in Figma. I took inspiration from another Turkish woman’s <a href="https://www.bilgenursaltik.com/">portfolio website.</a> On her product page she has pictures up top and then proceeds to explain about the project. </p>
             <img src="images/portfolio_inspo.png" alt="">
         </div>
         <div class="proof">
-            <h4 class="sub-title">Prototype</h4>
+            <h4 class="sub-title" id="Portfolio-prototype">Prototype</h4>
             <p>I worked my wireframes out until I got an <a href="https://www.figma.com/design/BbfJukyEJodSAnH4PXgOYM/portfolio-S3?node-id=0-1&t=tPSd5U2D26x7ECZL-1">interactive prototype</a>. <a href="https://i455198.hera.fontysict.net/">My previous portfolio</a> website was very simple and did not fit with my style. This time around I added more character with the colors and shapes. I wanted to explore more techniques so I tried things like moving stars and horizontal scrolls. In LO2 you can read more about this.</p>
         </div>
         <div class="proof">
-            <h4 class="sub-title">Internship</h4>
+            <h4 class="sub-title" id="Internship">Internship</h4>
             <p>I am also making another <a href="images/stage portfolio.pdf">portfolio</a> to send out for internships. I did this in Adobe InDesign. The portfolios for school have a lot of text in them which I think is unnecessary for internships. That is why I tried to keep it as simple as possible. I picked out my 5 best projects I did so far. I made a lot of professional looking mockups which I think ended up looking very good. I did this by downloading mockups and adding my own images and changing the background color so it fits with the project. I think this is way better than just adding a low quality photo taken on my phone.  </p>
         </div>
     </section>
