--- a/lo2.html
+++ b/lo2.html
@@ -67,7 +67,7 @@
     <section class="content">
         <h2 class="title">Loop - Media Agency</h2>
         <div class="proof">
-            <h4 class="sub-title">Trello</h4>
+            <h4 class="sub-title" id="Loop">Trello</h4>
             <p>We set deadlines for ourselves with the use of a Trello board. This is also how we divided the tasks.</p>
             <img src="images/trello loop.png" alt="">
         </div>
@@ -83,7 +83,7 @@
 
         <h2 class="title">Friends with "Benefits"</h2>
         <div class="proof">
-            <h4 class="sub-title">Shared documents</h4>
+            <h4 class="sub-title" id="Cards">Shared documents</h4>
             <p>We are using a shared document to write down <a href="images/unhinged vraagjes.pdf">card questions.</a> This way everyone can see each other’s cards and not write down similar things. We also want to encourage writing 20 cards per person, having a shared document helps keep track and get inspiration.</p>
         </div>     
 
@@ -91,7 +91,7 @@
 
         <h2 class="title">Portfolio</h2>
         <div class="proof">
-            <h4 class="sub-title">Website</h4>
+            <h4 class="sub-title" id="Git">Website</h4>
             <p>After finishing the Figma prototype and testing this with friends and family, I started developing. In order make it transferable and have version control, I'm using <a href="https://github.com/yagmur-k64/rain-noir">Github.</a> Any time I had a specific section done I pushed my code so I always had it saved there. I started by first adding all the text and images. Afterwards I did the simple css like the placement of everything and colors. When that looked right, I added more details like the movement of the images and stars. I am also trying to make my website responsive, for now only the nav bar is responsive, but it is still a work in progress. </p>
         </div>
     </section>
