--- a/lo4.html
+++ b/lo4.html
@@ -67,12 +67,12 @@
     <section class="content">
         <h2 class="title">Loop - Media Agency</h2>
         <div class="proof">
-            <h4 class="sub-title">Trello & One Drive</h4>
+            <h4 class="sub-title" id="Agile">Trello & One Drive</h4>
             <p>As a team we are using Trello to keep track of tasks and deadlines. We share all files on One Drive to have each other’s work like icons and illustrations.</p>
             <img src="images/trello fwb.png" alt="">
         </div>
         <div class="proof">
-            <h4 class="sub-title">Poster</h4>
+            <h4 class="sub-title" id="Motivation">Poster</h4>
             <p>I made a very catchy and fitting <a href="images/Poster_loop.png">poster</a> in order to get the stakeholders attention. We wanted to get the boardgame project which is why we went all in. I made the poster, Sao made a <a href="https://www.youtube.com/watch?v=tE8SND2FWhk">video</a> about LOOP and Danylo wrote a <a href="images/IMA - Motivation Letter LOOP.pdf">motivation letter.</a> We sent all of this to Petra & Maikel inc. In the end we got what we wanted and are currently making a board game. </p>
         </div>
         
@@ -81,16 +81,16 @@
 
         <h2 class="title">Friends with "Benefits"</h2>
         <div class="proof">
-            <h4 class="sub-title">Research</h4>
+            <h4 class="sub-title" id="Research">Research</h4>
             <p>Market, qualitative and quantitative research is what I have done to get to this point in the project. I have done a lot of desktop research to get a good quantity. But I have also done a couple of <a href="images/Loop interview.pdf">interviews</a> to get to know the target audience better. I set up some questions and picked a few people from my circle to ask these to. I made a <a href="images/customer journey.pdf">customer journey</a> so we can really get to visualize how our customers are thinking, feeling and doing. In order to understand their deepest needs and providing a better product.</p>
         </div>
         <div class="proof">
-            <h4 class="sub-title">Stakeholder</h4>
+            <h4 class="sub-title" id="Stakeholder">Stakeholder</h4>
             <p>We got lucky that our stakeholders for this project are also our teachers. Because of that we get to speak with them quite often. But we still did send out emails to set up stakeholder meetings. When we presented our work, they got very excited. Maikel even told us he is willing to pay us to create an actual working version so he can add it to his collection. He is also trying to connect us to publishers so we can get this game published. </p>
             <img src="images/mails.png" alt="">
         </div>
         <div class="proof">
-            <h4 class="sub-title">Career Day</h4>
+            <h4 class="sub-title" id="Career">Career Day</h4>
             <p>At the Fontys ICT Career Day I saw a board game where they used a very different set up. There is a circle with three different categories. Withing these categories there are three levels. I thought about incorporating this to our design in order to have a more original game. The idea was to have the tree levers be the categories. And within this with each right answer the player gets to move up. At the end of the game this creates a star plot, players can see how well they know each other in each category.</p>
             <img src="images/careerday.jpg" alt="">
         </div>
@@ -101,7 +101,7 @@
 
         <h2 class="title">Portfolio</h2>
         <div class="proof">
-            <h4 class="sub-title">Internship</h4>
+            <h4 class="sub-title" id="Internship">Internship</h4>
             <p>For my internship I went to the Fontys ICT Career Day. There I found out that there are not many companies looking for a UX/UI designer. There are in general very little amount of companies who do anything with Media, and the ones who do, are looking for developers. That is why I want to create a strong portfolio. There was one company which I liked a lot, <a href="https://stuur.men/">Stuurmen Branding Agency.</a> They are a branding company. In semester 2 we had a branding project and it was my favourite. That is why I am trying to focus on that. . I also updated my <a href="https://www.linkedin.com/in/yagmur-karabulut-264983360/">LinkedIn</a> profile and am currently trying to create connections. </p>
         </div>
     </section>
