--- a/lo1.html
+++ b/lo1.html
@@ -74,7 +74,7 @@
         </div>
         <div class="proof">
             <h4 class="sub-title" id="Style-scape">Style scapes</h4>
-            <p>I made a style scape in Adobe Illustrator. For my style scape I used soft, but cheerful colors. I tried making it even more playful by adding shapes and squiggles. After finding inspiration for the logo, I kind of recreated it with a different font. I also made an animation with Adobe Animate. This was my first time using the program so I looked up some <a href="https://www.youtube.com/watch?v=0itiuHreY3A">tutorials.</a> This animation helps a lot with the readability. </p>
+            <p>I made a style scape in Adobe Illustrator. For my style scape I used soft, but cheerful colors. I tried making it even more playful by adding shapes and squiggles. After finding inspiration for the logo, I kind of recreated it with a different font. I also made an animation with Adobe Animate. This was my first time using the program so I looked up some <a href="https://www.youtube.com/watch?v=0itiuHreY3A" target="_blank">tutorials.</a> This animation helps a lot with the readability. </p>
             <img src="images/style scape_yagmur.png" alt="style scape loop">
             <img src="images/animation.gif" alt="logo animation">
         </div>
@@ -90,7 +90,7 @@
         <h2 class="title">Friends with "Benefits"</h2>
         <div class="proof">
             <h4 class="sub-title" id="Concept">Concept</h4>
-            <p>For this project we changed our concept once completely. At first we had the idea to create an educational <a href="images/NEWS-the game.pdf">news game</a>  for younger teenagers. But our stake holder did not seem very enthusiastic about the whole concept. So I did more research on existing games and came up with a guessing game. My <a href="images/Friend with benefits.pdf">initial idea</a> was having cards with 5 statements on it which one player has to rank and the other players have to guess that one players ranking. What started out as an innocent game ended up being a very spicy 18+ party game. </p>
+            <p>For this project we changed our concept once completely. At first we had the idea to create an educational <a href="images/NEWS-the game.pdf" target="_blank">news game</a>  for younger teenagers. But our stake holder did not seem very enthusiastic about the whole concept. So I did more research on existing games and came up with a guessing game. My <a href="images/Friend with benefits.pdf" target="_blank">initial idea</a> was having cards with 5 statements on it which one player has to rank and the other players have to guess that one players ranking. What started out as an innocent game ended up being a very spicy 18+ party game. </p>
         </div>
         <div class="proof">
             <h4 class="sub-title" id="Techniques">Techniques</h4>
@@ -100,7 +100,7 @@
         </div>
         <div class="proof">
             <h4 class="sub-title" id="Box-design">Box design</h4>
-            <p>Packaging is an important factor, it’s the first thing anyone sees about a product. Another teammate had already made a styles so I went off of that. I started by doing research to existing games. I wrote out <a href="images/eisen.pdf">everything</a> that has to be on the box. After making sketches I started designing on illustrator. You can read more about the iterative process in LO 3.</p>
+            <p>Packaging is an important factor, it’s the first thing anyone sees about a product. Another teammate had already made a styles so I went off of that. I started by doing research to existing games. I wrote out <a href="images/eisen.pdf" target="_blank">everything</a> that has to be on the box. After making sketches I started designing on illustrator. You can read more about the iterative process in LO 3.</p>
             <img src="images/sketches.jpg" alt="">
         </div>
         <div class="proof">
@@ -111,7 +111,7 @@
         </div>
         <div class="proof">
             <h4 class="sub-title" id="Product-website">Website</h4>
-            <p>We created a product <a href="https://www.figma.com/proto/gpREKUao3aSIgUmv4ZDmj9/Friends-w-Benefits?page-id=0%3A1&node-id=1-2&viewport=424%2C181%2C0.09&t=JUAPiJmPW4y8wxaz-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=1%3A2">website</a> for marketing. I made the whole home page. Our final design has a racoon mascot. I suggesting giving the racoon a name, which ended up being Rick. This will help with our marketing. In the FAQ section I added a lot of jokes about Rick. I also had the idea to make merchandise. We created condoms, grinders and shot glasses with a picture of Rick on it. When we presented this to our teacher, we got a lot of laughs and good feedback.</p>
+            <p>We created a product <a href="https://www.figma.com/proto/gpREKUao3aSIgUmv4ZDmj9/Friends-w-Benefits?page-id=0%3A1&node-id=1-2&viewport=424%2C181%2C0.09&t=JUAPiJmPW4y8wxaz-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=1%3A2" target="_blank">website</a> for marketing. I made the whole home page. Our final design has a racoon mascot. I suggesting giving the racoon a name, which ended up being Rick. This will help with our marketing. In the FAQ section I added a lot of jokes about Rick. I also had the idea to make merchandise. We created condoms, grinders and shot glasses with a picture of Rick on it. When we presented this to our teacher, we got a lot of laughs and good feedback.</p>
             <img src="images/1screen.png" alt="">
             <img src="images/2screens.png" alt="">
         </div>
@@ -126,16 +126,16 @@
         </div>
         <div class="proof">
             <h4 class="sub-title" id="Portfolio-inspo">Inspiration</h4>
-            <p>I did research on color combinations and existing portfolios and website layouts. After collecting all of that I made wireframes in Figma. I took inspiration from another Turkish woman’s <a href="https://www.bilgenursaltik.com/">portfolio website.</a> On her product page she has pictures up top and then proceeds to explain about the project. </p>
+            <p>I did research on color combinations and existing portfolios and website layouts. After collecting all of that I made wireframes in Figma. I took inspiration from another Turkish woman’s <a href="https://www.bilgenursaltik.com/" target="_blank">portfolio website.</a> On her product page she has pictures up top and then proceeds to explain about the project. </p>
             <img src="images/portfolio_inspo.png" alt="">
         </div>
         <div class="proof">
             <h4 class="sub-title" id="Portfolio-prototype">Prototype</h4>
-            <p>I worked my wireframes out until I got an <a href="https://www.figma.com/design/BbfJukyEJodSAnH4PXgOYM/portfolio-S3?node-id=0-1&t=tPSd5U2D26x7ECZL-1">interactive prototype</a>. <a href="https://i455198.hera.fontysict.net/">My previous portfolio</a> website was very simple and did not fit with my style. This time around I added more character with the colors and shapes. I wanted to explore more techniques so I tried things like moving stars and horizontal scrolls. In LO2 you can read more about this.</p>
+            <p>I worked my wireframes out until I got an <a href="https://www.figma.com/design/BbfJukyEJodSAnH4PXgOYM/portfolio-S3?node-id=0-1&t=tPSd5U2D26x7ECZL-1" target="_blank">interactive prototype</a>. <a href="https://i455198.hera.fontysict.net/" target="_blank">My previous portfolio</a> website was very simple and did not fit with my style. This time around I added more character with the colors and shapes. I wanted to explore more techniques so I tried things like moving stars and horizontal scrolls. In LO2 you can read more about this.</p>
         </div>
         <div class="proof">
             <h4 class="sub-title" id="Internship">Internship</h4>
-            <p>I am also making another <a href="images/stage portfolio.pdf">portfolio</a> to send out for internships. I did this in Adobe InDesign. The portfolios for school have a lot of text in them which I think is unnecessary for internships. That is why I tried to keep it as simple as possible. I picked out my 5 best projects I did so far. I made a lot of professional looking mockups which I think ended up looking very good. I did this by downloading mockups and adding my own images and changing the background color so it fits with the project. I think this is way better than just adding a low quality photo taken on my phone.  </p>
+            <p>I am also making another <a href="images/stage portfolio.pdf" target="_blank">portfolio</a> to send out for internships. I did this in Adobe InDesign. The portfolios for school have a lot of text in them which I think is unnecessary for internships. That is why I tried to keep it as simple as possible. I picked out my 5 best projects I did so far. I made a lot of professional looking mockups which I think ended up looking very good. I did this by downloading mockups and adding my own images and changing the background color so it fits with the project. I think this is way better than just adding a low quality photo taken on my phone.  </p>
         </div>
     </section>
 <!-- footer -->
