--- a/lo4.html
+++ b/lo4.html
@@ -73,7 +73,7 @@
         </div>
         <div class="proof">
             <h4 class="sub-title" id="Motivation">Poster</h4>
-            <p>I made a very catchy and fitting <a href="images/Poster_loop.png">poster</a> in order to get the stakeholders attention. We wanted to get the boardgame project which is why we went all in. I made the poster, Sao made a <a href="https://www.youtube.com/watch?v=tE8SND2FWhk">video</a> about LOOP and Danylo wrote a <a href="images/IMA - Motivation Letter LOOP.pdf">motivation letter.</a> We sent all of this to Petra & Maikel inc. In the end we got what we wanted and are currently making a board game. </p>
+            <p>I made a very catchy and fitting <a href="images/Poster_loop.png" target="_blank">poster</a> in order to get the stakeholders attention. We wanted to get the boardgame project which is why we went all in. I made the poster, Sao made a <a href="https://www.youtube.com/watch?v=tE8SND2FWhk" target="_blank">video</a> about LOOP and Danylo wrote a <a href="images/IMA - Motivation Letter LOOP.pdf" target="_blank">motivation letter.</a> We sent all of this to Petra & Maikel inc. In the end we got what we wanted and are currently making a board game. </p>
         </div>
         
         <div class="divider2"></div>
@@ -82,7 +82,7 @@
         <h2 class="title">Friends with "Benefits"</h2>
         <div class="proof">
             <h4 class="sub-title" id="Research">Research</h4>
-            <p>Market, qualitative and quantitative research is what I have done to get to this point in the project. I have done a lot of desktop research to get a good quantity. But I have also done a couple of <a href="images/Loop interview.pdf">interviews</a> to get to know the target audience better. I set up some questions and picked a few people from my circle to ask these to. I made a <a href="images/customer journey.pdf">customer journey</a> so we can really get to visualize how our customers are thinking, feeling and doing. In order to understand their deepest needs and providing a better product.</p>
+            <p>Market, qualitative and quantitative research is what I have done to get to this point in the project. I have done a lot of desktop research to get a good quantity. But I have also done a couple of <a href="images/Loop interview.pdf" target="_blank">interviews</a> to get to know the target audience better. I set up some questions and picked a few people from my circle to ask these to. I made a <a href="images/customer journey.pdf" target="_blank">customer journey</a> so we can really get to visualize how our customers are thinking, feeling and doing. In order to understand their deepest needs and providing a better product.</p>
         </div>
         <div class="proof">
             <h4 class="sub-title" id="Stakeholder">Stakeholder</h4>
@@ -102,7 +102,7 @@
         <h2 class="title">Portfolio</h2>
         <div class="proof">
             <h4 class="sub-title" id="Internship">Internship</h4>
-            <p>For my internship I went to the Fontys ICT Career Day. There I found out that there are not many companies looking for a UX/UI designer. There are in general very little amount of companies who do anything with Media, and the ones who do, are looking for developers. That is why I want to create a strong portfolio. There was one company which I liked a lot, <a href="https://stuur.men/">Stuurmen Branding Agency.</a> They are a branding company. In semester 2 we had a branding project and it was my favourite. That is why I am trying to focus on that. . I also updated my <a href="https://www.linkedin.com/in/yagmur-karabulut-264983360/">LinkedIn</a> profile and am currently trying to create connections. </p>
+            <p>For my internship I went to the Fontys ICT Career Day. There I found out that there are not many companies looking for a UX/UI designer. There are in general very little amount of companies who do anything with Media, and the ones who do, are looking for developers. That is why I want to create a strong portfolio. There was one company which I liked a lot, <a href="https://stuur.men/" target="_blank">Stuurmen Branding Agency.</a> They are a branding company. In semester 2 we had a branding project and it was my favourite. That is why I am trying to focus on that. . I also updated my <a href="https://www.linkedin.com/in/yagmur-karabulut-264983360/" target="_blank">LinkedIn</a> profile and am currently trying to create connections. </p>
         </div>
     </section>
 <!-- footer -->
